@@ -29,6 +29,11 @@ For autoconf, autoreconf, autoupdate, autoheader, autoscan and ifnames.
   configure to adapt for packages not using autoconf on case-insensitive
   filesystems.
 
+- Diagnostics
+  More errors are now caught (circular AC_REQUIRE dependencies,
+  AC_DEFINE in the action part of an AC_CACHE_CHECK, too many pops
+  etc.).  In addition, their location and call stack are given.
+
 ** autoupdate
 autoupdate is much more powerful, and is able to provide the glue code
 which might be needed to move from an old macro to its newer
